[feat] fragment container tools